# Checkpoint

./: .gitattributes  .gitignore  .gitmodules  Checkpoint.code-workspace  LICENSE.md  README.md  build-cpp.sh  deps.txt  dev-agent.js  dev.js  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  eslint.config.mjs  jest.config.js  package.json  pricing.md  test-demo.sh  tsconfig.test.json  versions.json
.data/: .gitignore
.github/agents/: Checkpoint.agent.md
.github/workflows/: benchmark.yaml  build-installers.yaml  deploy-website.yml  docker-publish.yaml  publish-longtail-addon.yaml  test.js  test.yaml
benchmark/: .gitignore  README.md  config.json  config.lyra.json  config.titan-4vcpu-16gb.json  config.titan-4vcpu-32gb.json  config.titan-4vcpu.json  config.titan-8vcpu-64gb.json  config.titan-checkpoint.json  config.titan.json  run-benchmark.sh  summarize.js
benchmark/adapters/: ark.sh  checkpoint.sh  gitea.sh  interface.md  lore.sh  perforce.sh
benchmark/lib/: common.sh  provision.sh  teardown.sh
config/default/: state-tree.yaml
docker-compose/: .env.example  README.md  docker-compose.yaml
docker-compose/config/: .secrets
docker-compose/scripts/: init-certs.sh  obtain-cert.sh
git-hooks/: post-commit  pre-commit  pre-push
installer/linux/: checkpoint-tray.desktop  checkpoint.desktop
installer/macos/: distribution.xml  notarize.cjs
installer/nsis/: installer.nsh
installer/scripts/: postinstall-linux.sh  preremove-linux.sh
installer/service/: checkpoint-daemon.service  com.checkpointvcs.daemon.plist  com.checkpointvcs.tray.plist  install-service.ps1
linux-build/: Dockerfile  run.sh
scripts/: audit.js  build-daemon-sea.ps1  build-daemon-sea.sh  build-daemon.ps1  build-daemon.sh  check-workspace-deps.js  copy-daemon-node-modules.mjs  migrate.js  set-version.js  test.js
src/app/: .dockerignore  .eslintrc.js  .gitignore  .yarnrc.yml  CONFIGURATION.md  Dockerfile  MIGRATION.md  eslint.config.js  next.config.js  obfuscate.config.json  package.json  redwood.toml  start-docker.sh  tsconfig.json  tsconfig.lib.json
src/app-new/: .env.example  package-lock.json  package.json  tsconfig.lib.json
src/clients/cli/: .gitignore  CMakeLists.txt  README.md  commands.hpp  daemon_client.hpp  main.cpp  terminal_menu.hpp  types.hpp  version.hpp  workspace.hpp
src/core/: .eslintrc.js  .gitignore  Dockerfile  README.md  bun.lockb  docker-compose.yaml  eslint.config.js  jest.config.ts  package.json  package.ts  tsconfig-base.json  tsconfig.json
src/desktop/: .eslintrc.yml  LICENSE  README.md  electron-builder.json  eslint.config.js  package.json  tailwind.config.js  tsconfig.json  (+1 more)
src/desktop-vite/: index.html  package.json
src/longtail/addon/: .gitignore  CMakeLists.txt  binding.gyp  build-msvc.bat  package.json  todo-functions.md  tsconfig.json  tsconfig.tsbuildinfo
src/longtail/addon/lib/: downsync.d.ts  downsync.d.ts.map  downsync.js  downsync.js.map  error.d.ts  error.d.ts.map  error.js  error.js.map  hash-api.d.ts  hash-api.d.ts.map  hash-api.js  hash-api.js.map  hash-registry-api.d.ts  hash-registry-api.d.ts.map  hash-registry-api.js  hash-registry-api.js.map  index.ts  longtail-api-async-get-existing-content.d.ts  longtail-api-async-get-existing-content.d.ts.map  longtail-api-async-get-existing-content.js  longtail-api-async-get-existing-content.js.map  longtail-api-block-store.d.ts  longtail-api-block-store.d.ts.map  longtail-api-block-store.js  longtail-api-block-store.js.map  longtail-api-progress.d.ts  longtail-api-progress.d.ts.map  longtail-api-progress.js  longtail-api-progress.js.map  longtail-api.d.ts  longtail-api.d.ts.map  longtail-api.js  longtail-api.js.map  longtail.d.ts  longtail.d.ts.map  longtail.js  longtail.js.map  pointer.d.ts  pointer.d.ts.map  pointer.js  (+23 more)
src/longtail/addon/src/: client.ts  commit.ts  create-repo.ts  downsync.ts  error.ts  hash-api.ts  hash-registry-api.ts  longtail-addon.cpp  longtail-api-async-get-existing-content.ts  longtail-api-block-store.ts  longtail-api-jobs.ts  longtail.ts  pointer.ts  storage-api.ts  store-index.ts  stored-block.ts  test.ts  util.ts  version-index.ts
src/longtail/addon/src/__tests__/: create.test.ts  downsync.test.ts  full.test.ts  pull.test.ts  test-client-full.ts  test-client.ts  test-server-full.ts
src/longtail/addon/src/apis/: hash-api.ts  hash-registry-api.ts  longtail-api-block-store.ts  longtail-api-jobs.ts  longtail-api-progress.ts  longtail-api.ts
src/longtail/addon/src/client/: client-interface.ts  commit.ts  pull.ts
src/longtail/addon/src/longtail/: .gitignore
src/longtail/addon/src/longtail/include/src/: longtail.h
src/longtail/addon/src/server/: create-repo.ts  server-interface.ts
src/longtail/addon/src/types/: modification.ts  pointer.ts  storage-api.ts  store-index.ts  stored-block.ts  version-index.ts
src/longtail/addon/src/util/: decode.ts  misc.ts
src/longtail/wrapper/: .gitignore  CMakeLists.txt  Makefile  copy-seed.js  copy.sh  full-build-msvc.sh  full-build.sh  package.json
src/longtail/wrapper/cmake/: GenerateMigrations.cmake  ScanMigrations.cmake
src/longtail/wrapper/prisma/: schema.prisma
src/longtail/wrapper/prisma/migrations/20250515235532_init/: migration.sql
src/longtail/wrapper/prisma/seed/: migration.sql
src/longtail/wrapper/scripts/: generate_migrations.sh
src/longtail/wrapper/src/: main.cpp  main.h  merge.cpp  seaweedfs.cpp
src/longtail/wrapper/src/exposed/: add.cpp  checkout.cpp  exposed.h  locks.cpp  login.cpp  main.cpp  main.h  merge.cpp  pull-lib.cpp  pull.cpp  read-file.cpp  server-details.cpp  stage.cpp  submit-lib.cpp  submit.cpp  types.h  whoami.cpp  workspace-details.cpp  workspace-state.cpp  wrapper-handle.h
src/longtail/wrapper/src/util/: cancel.h  config.cpp  config.h  diff.cpp  diff.h  existing-content.cpp  existing-content.h  flush.cpp  flush.h  gateway.cpp  gateway.h  graphql-client.cpp  graphql-client.h  progress.cpp  progress.h  r2.cpp  r2.h  s3.cpp  s3.h  seaweedfs.cpp  seaweedfs.h  token-refresh.h  trpc-client.cpp  trpc-client.h
tests/: README.md  setup.ts
website/: package.json
(+788 files in other folders)
